Annotate PostTaskAndReplyRelay as being self-managed and potentially leaked in PostTaskAndReplyImpl.

The leaks occur on shutdown when the |task| either hasn't been processed
yet or doesn't have time to post back to the origin sequence before
it stops receiving or processing tasks.

Those leaks being racy with shutdown, this has resulted in numerous
flaky LSan failures resulting in suppressions over the years.

BUG=602964

Review-Url: https://codereview.chromium.org/2236993004
Cr-Commit-Position: refs/heads/master@{#413803}